<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Title Bar -->
    <include
        android:id="@+id/topBar"
        layout="@layout/top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Scrollable Content -->
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">


                    <TextView
                        android:id="@+id/event_qr_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Event QR Code "
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        app:layout_constraintHorizontal_bias="0.087"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_poster_link" />

                    <TextView
                        android:id="@+id/event_poster_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Event Poster "
                        android:onClick="onClick"
                        android:textColor="@color/blue"
                        android:clickable="true"
                        android:textSize="18sp"
                        app:layout_constraintHorizontal_bias="0.083"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_description2" />

                    <TextView
                        android:id="@+id/sample_entrants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Sample Entrants "
                        android:onClick="onClick"
                        android:clickable="true"
                        android:textColor="@color/green"
                        android:textSize="18sp"
                        app:layout_constraintHorizontal_bias="0.09"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_qr_link" />

                    <TextView
                        android:id="@+id/textView_description2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon_capacity"
                        tools:text="Join us for a day of family-friendly activities, games, and food! There will be face painting, a bouncy castle, live music, and much more." />

                    <ImageView
                        android:id="@+id/icon_capacity"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/group_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon_location" />

                    <TextView
                        android:id="@+id/textView_capacity2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_capacity"
                        app:layout_constraintStart_toEndOf="@+id/icon_capacity"
                        app:layout_constraintTop_toTopOf="@+id/icon_capacity"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="Entrants in Waiting List:" />

                    <ImageView
                        android:id="@+id/icon_location"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/location_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/icon_calendar" />

                    <TextView
                        android:id="@+id/textView_location2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_location"
                        app:layout_constraintStart_toEndOf="@+id/icon_location"
                        app:layout_constraintTop_toTopOf="@+id/icon_location"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="Central Park, 123 Main St" />

                    <ImageView
                        android:id="@+id/icon_calendar"
                        android:layout_width="26dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/dateandtime"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_eventTitle2" />

                    <TextView
                        android:id="@+id/textView_dateTime2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="2dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_calendar"
                        app:layout_constraintStart_toEndOf="@+id/icon_calendar"
                        app:layout_constraintTop_toTopOf="@+id/icon_calendar"
                        app:layout_constraintVertical_bias="1.0"
                        tools:text="July 15, 2024 • 10:00 AM - 4:00 PM" />

                    <TextView
                        android:id="@+id/textView_eventTitle2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="16dp"
                        tools:text="Summer Family Fun Day" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/chosen_entrant_button"
                android:layout_width="361dp"
                android:layout_height="63dp"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="View List of Chosen Entrants "
                android:textColor="@color/white"
                app:backgroundTint="@color/blue"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enrolled_entrant_button"
                android:layout_width="361dp"
                android:layout_height="63dp"
                android:padding="12dp"
                android:text="View List of Enrolled Entrants "
                android:textColor="@color/white"
                app:backgroundTint="@color/blue"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chosen_entrant_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelled_entrant_button"
                android:layout_width="361dp"
                android:layout_height="63dp"
                android:padding="12dp"
                android:text="View List of Cancelled Entrants "
                android:textColor="@color/white"
                app:backgroundTint="@color/blue"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enrolled_entrant_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/waiting_list_button"
                android:layout_width="361dp"
                android:layout_height="63dp"
                android:padding="12dp"
                android:text="View Waiting List "
                android:textColor="@color/white"
                app:backgroundTint="@color/blue"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancelled_entrant_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>